--- a/src/HelpfulThings.Connect.Scryfall/HelpfulThings.Connect.Scryfall.csproj
+++ b/src/HelpfulThings.Connect.Scryfall/HelpfulThings.Connect.Scryfall.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>1.3.1</Version>
+        <Version>1.3.2</Version>
         <Title>HelpfulThings.Connect.Scryfall</Title>
         <Authors>Marissa Sherman</Authors>
         <Description>A .NET Client for Scryfall.com</Description>
@@ -21,6 +21,7 @@
       <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Splat" Version="14.8.6" />
       <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
     </ItemGroup>
 
