--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -27,10 +27,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Package
+      run: dotnet pack -c Release -o . src/HelpfulThings.Connect.Scryfall/HelpfulThings.Connect.Scryfall.csproj
     - name: Publish NuGet
-      uses: brandedoutcast/publish-nuget@v2.5.5
-      with:
-        PROJECT_FILE_PATH: "src/HelpfulThings.Connect.Scryfall/HelpfulThings.Connect.Scryfall.csproj"
-        PACKAGE_NAME: "HelpfulThings.Connect.Scryfall"
-        NUGET_KEY: ${{ secrets.NUGETKEY }}
+      run: dotnet nuget push *.nuget -k ${{ secrets.NUGETKEY }} -s https://api.nuget.org/v3/index.json
                 
