--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -27,8 +27,6 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Package
-      run: dotnet pack -c Release -o . HelpfulThings.Connect.Scryfall/HelpfulThings.Connect.Scryfall.csproj
     - name: Publish NuGet
-      run: dotnet nuget push *.nuget -k ${{ secrets.NUGETKEY }} -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push **/*.nuget -k ${{ secrets.NUGETKEY }} -s https://api.nuget.org/v3/index.json
                 
