--- a/.github/workflows/build-nuget.yml
+++ b/.github/workflows/build-nuget.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore -c Release
     - name: Publish NuGet
-      run: dotnet nuget push **/*.nuget -k ${{ secrets.NUGETKEY }} -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push HelpfulThings.Connect.Scryfall/bin/Release/*.nuget -k ${{ secrets.NUGETKEY }} -s https://api.nuget.org/v3/index.json
                 
