--- a/.github/workflows/build-and-push-nuget.yml
+++ b/.github/workflows/build-and-push-nuget.yml
@@ -3,8 +3,8 @@
 
 name: Publish to NuGet.org
 on:
-  push:
-    branches: [ "main" ]
+  release:
+    types: [published]
 jobs:
   build-and-deploy:
     defaults:
